# haloforge-plugin-api

./: .gitignore  Cargo.toml  LICENSE  README.md
js/: package.json  tsconfig.json
js/src/: index.ts  ipc.ts
pack/: README.md  package.json  tsconfig.json
pack/src/: cli.ts  core.ts
sdk/: README.md  package.json
sdk/src/: hooks.ts  registry.ts  types.ts
src/: error.rs  lib.rs  manifest.rs  permissions.rs  types.rs
